overflow fix

--- a/style.less
+++ b/style.less
@@ -161,7 +161,7 @@ html {
 }
 .usp-pijl-links::before {
   content: "";
-  margin-left: -24px;
+  margin-left: -20px;
   position: absolute;
   top: 0;
   right: 0;
